Register users have changes

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-APP_NAME=EduGuruAcademy
+APP_NAME=EducationGuru
 APP_ENV=local
 APP_KEY=base64:2u16+csRWVSuoHv/wLTkApdsmTgIZJjgwVfu+VeTw/w=
 APP_DEBUG=true
